Change basic text color and headers and fix z-index issue

--- a/src/components/UI/Card/Card.module.scss
+++ b/src/components/UI/Card/Card.module.scss
@@ -18,7 +18,6 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-
     &:before {
       content: "";
       width: 100%;
@@ -35,7 +34,8 @@
       display: block;
     }
     h2 {
-      z-index: 2;
+      color: #fff;
+      z-index: 1;
       padding: 0.5em;
       position: relative;
       font-size: 1.2em;
