--- a/src/scss/app.module.scss
+++ b/src/scss/app.module.scss
@@ -2,6 +2,16 @@
 
 body {
   font-family: "Noto Sans", sans-serif;
+  color: #666;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #333;
 }
 
 html,
